Fix annotations to allow DateTime data values, issue #235